--- a/_posts/2024-03-28-Tideman.md
+++ b/_posts/2024-03-28-Tideman.md
@@ -23,9 +23,9 @@ image:
 
 ## Background
 
-Tideman is [CS50's](https://cs50.harvard.edu/x/2024/) notoriously difficult problem set. Exhausting both [notebook paper](https://www.reddit.com/r/cs50/comments/153w21e/finished_tideman_no_coding_experience/#lightbox) and [sanity](https://www.reddit.com/r/cs50/comments/n3vv26/i_officially_hate_tideman/). The problem set has gained notoriety for it's difficulty that CS50 has created a [t-shirt](https://cs50.harvardshop.com/products/i-finished-tideman-cs50-t-shirt) for it's completion. 
+Tideman is [CS50's](https://cs50.harvard.edu/x/2024/) notoriously difficult problem set. Exhausting both [notebook paper](https://www.reddit.com/r/cs50/comments/153w21e/finished_tideman_no_coding_experience/#lightbox) and [sanity](https://www.reddit.com/r/cs50/comments/n3vv26/i_officially_hate_tideman/). The problem has become so infamous for it's difficulty that CS50 created a [t-shirt](https://cs50.harvardshop.com/products/i-finished-tideman-cs50-t-shirt) for it's completion. 
 
-It's allure is in the low barrier to entry, but a steep learning curve.
+Its allure is in the low barrier to entry, but a steep learning curve.
 
 ## Problem to solve
 
@@ -83,7 +83,7 @@ But now let's say now that Bob beat Alice. Who wins?
 
 ![Desktop View](/assets/images/tideman_images/3_person_cycle.png){: width="300" height="300" .w-75 .normal }
 
-Despite each candidate having one win and one loss over each other, we can see that Alice beat Mike by the largest margin (5). Therefore, Alice is our winner.
+Despite each candidate having one win and one loss against each other, we can see that Alice beat Mike by the largest margin (5). Therefore, Alice is our winner.
 
 ![Desktop View](/assets/images/tideman_images/3_person_cycle_win.png){: width="300" height="300" .w-75 .normal }
 
@@ -115,9 +115,9 @@ The code below represents a small portion of a [larger file](https://github.com/
 
 ### Variables
 
-- Struct `pair` containing an integer `winner` and integer `loser`
+- Struct `pair` containing an integer `winner` and integer `loser`.
 
-- Array `pairs`[^footnote] containing every combination of candidate pairs as a `pair` struct
+- Array `pairs`[^footnote] containing every combination of candidate pairs as a `pair` struct.
     - Additionally, our array `pairs` is sorted by strength of victory of one candidate over another, starting with the strongest victories first. This will come in handy when we have to figure out which pair in a cycle is weakest.
 
 - `candidates`, an array of strings containing the candidate names. This makes the indexing of the array associated to a candidate. For example, Alice could be indexed as the 5th spot in the candidates array. So if we have `pairs[n].winner` = 5 and `pairs[n].loser` = 6, we know that in this pairing, Alice beat whoever candidate #6 is.
@@ -174,7 +174,7 @@ Let's take a look at what `has_cycle` is doing when called on by `lock_pairs`. T
 - `visited` indicates which candidates we've already verified as fully processed and checked for cycles. So we can save time and skip anybody who has already been visited. Technically, we do not need this function, but it saves a huge amount of processing time for our code to skip the need to check candidates we have already visited.
 - `inStack` indicates candidates that are currently being checked for a cycle. So if we come across a candidate and see that they are already marked as true for their corresponding inStack value, then we know that we've visited them before, meaning we have found a cycle.
 
-2. For each candidate, we'll check if they have been visited, and call on our `dfs_cycle` function to perform a check for cycles if not
+2. For each candidate, we'll check if they have been visited, and call on our `dfs_cycle` function to perform a check for cycles if not.
 
 ```bash
 bool has_cycle()
@@ -201,7 +201,7 @@ bool has_cycle()
 
 Now let's get into the function we'll be calling over and over again, `dfs_cycle`
 
-- Think of `has_cycle` as our initializer for checking cycles, setting values and creating our initial loop for each candidate
+- Think of `has_cycle` as our initializer for checking cycles, setting values and creating our initial loop for each candidate.
 - Now, we are using `dfs_cycle` to perform the core logic of our depth first search. Returning `true` if it finds a cycle, which will cause our `has_cycle` function to also return `true` to indicate a cycle, since `dfs_cycle` is a condition of `has_cycle`
 
 ```bash
@@ -228,14 +228,14 @@ bool dfs_cycle(int candidate, bool visited[], bool inStack[])
 }
 ```
 
-In this we do the following:
+In this, we do the following:
 
-1. Check if the candidate is in our 'stack'. If they are, this means we have come across them earlier, and are therefore in a cycle. This will immediately exit our current function and tell our `has_cycle` function that there is a cycle[^fn2].
+1. Check if the candidate is in our "stack". If they are, this means we have come across them earlier, and are therefore in a cycle. This will immediately exit our current function and tell our `has_cycle` function that there is a cycle[^fn2].
 
 2. Check if the candidate has been visited. If they have, then we can return false, and move on to the next candidate to check.
 
 3. Before we move on to the next candidate to check, we need to leave a paper trail of our traversal so we can remember what we've done. So we'll mark the candidate as in our stack and visited. 
-- Once a candidate is marked as visited, they'll remain marked as visited until our entire DFS is complete. However, a candidate marked as inStack will be set back to false each time `dfs_cycle` is called, hence `inStack[candidate] = false;` in line 20 above.
+- Once a candidate is marked as visited, they'll remain marked as visited until our entire DFS is complete. However, a candidate marked as inStack will be set back to false each time `dfs_cycle` completes, hence `inStack[candidate] = false;` in line 19 above.
 
 4. Since we now know we have a candidate that is both not in our call stack and not visited, we can go to their neighbor and do a check. We only want to check neighbors that are actually locked into our graph, so our first condition will be if our neighbor, `i`, is locked in with our candidate. If they are, then we will execute our dfs_cycle on our neighbor `i`. We want to do this for each neighbor, so we'll wrap this code in a loop for each neighbor that the candidate being processed has.
 - You've probably noticed that we are calling `dfs_cycle` within `dfs_cycle`. This is [recursion]({{ page.url | relative_url }}), it allows us to ensure that we check every candidate, and by the way we've setup our `dfs_cycle` function, it won't break itself or run forever. This function will end eventually, either once each candidate is marked as visited and we iterate through the loop of `has_cycle`, or if we find ourselves able to return to a candidate already in `inStack`, indicating we've found a cycle.
@@ -252,12 +252,12 @@ Large language models like GPT rely on DFS to explore various responses to quest
 - [Depth-first search in 4 minutes](https://www.youtube.com/watch?v=Urx87-NMm6c): Quick overview of the concept using simple visuals. I'd advise watching this before other lectures.
 - [MIT: Depth-First Search by Erik Demaine](https://www.youtube.com/watch?v=AfSk24UTFS8&t): In depth analysis of what a DFS is and a good introduction to graph theory. Erik Demaine, a savant, programmed a DFS at age 7 to solve a maze, without knowing what it even was.
 - [MIT: Depth-First Search by Justin Solomon](https://www.youtube.com/watch?v=IBfWDYSffUU): Similar to Erik Demaine's lecture, however, Justin takes a bit more of a concerted effort to ensure that he clearly explains layered concepts in a simple manner.
-- [Detect Cycle in Directed Graph Algorithm](https://www.youtube.com/watch?v=rKQaZuoUR4M&t): This was best for connecting how to the theories at hand into code (Java).
+- [Detect Cycle in Directed Graph Algorithm](https://www.youtube.com/watch?v=rKQaZuoUR4M&t): This was best for connecting graph theory into code (lecturer uses Java).
 
 ## Full source code
-See [here](https://github.com/DPickei/Tideman) for the project repository
+See [here](https://github.com/DPickei/Tideman) for the project repository.
 
 ## Footnotes
 
-[^footnote]: I named the array 'pairs' as it seems like the plurality of struct 'pair'. Retrospectively, it would have been better to use a completely different name for our struct so that the user does not have to mentally juggle this distinction
+[^footnote]: I named the array 'pairs' as it seems like the plurality of struct 'pair'. In retrospect, it would have been better to use a completely different name for our struct so that the user does not have to mentally juggle this distinction.
 [^fn2]: For simplicity, we will omit that returning `true` within a recursion will initially unwind the call stack of `dfs_cycle` before it returns `true` to `has_cycle`
